--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Android Code Test</string>
+    <string name="generic_error">Oops! Something went wrong!</string>
 </resources>
